--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e5f797">  <td>23/02/24 22:46:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonProfileScript.purchaseItems()[pri:0, instance:scripts.profile.AmazonProfileScript@4d465b11]">purchaseItems</td> 
-  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="e5f797">  <td>23/02/24 22:46:57</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonProfileScript.beforeMethod()[pri:0, instance:scripts.profile.AmazonProfileScript@4d465b11]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="e5f797">  <td>23/02/24 22:47:33</td>   <td>36967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AmazonProfileScript.afterMethod()[pri:0, instance:scripts.profile.AmazonProfileScript@4d465b11]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
+<tr bgcolor="bb89bb">  <td>23/04/24 15:06:20</td>   <td>0</td> <td title="&gt;&gt;GoogleScript.beforeSuite()[pri:0, instance:scripts.GoogleScript@61001b64]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1265900909</td>   <td></td> </tr>
+<tr bgcolor="bb89bb">  <td>23/04/24 15:06:24</td>   <td>3513</td> <td title="&lt;&lt;GoogleScript.afterSuite()[pri:0, instance:scripts.GoogleScript@61001b64]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1265900909</td>   <td></td> </tr>
+<tr bgcolor="bb89bb">  <td>23/04/24 15:06:24</td>   <td>3457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleScript.test()[pri:0, instance:scripts.GoogleScript@61001b64]">test</td> 
+  <td>main@1265900909</td>   <td></td> </tr>
 </table>
